Fixed z-index on footer content

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -377,12 +377,11 @@ body {
   position: fixed;
   bottom: 5rem;
   right: 4rem;
-  z-index: 10;
+  z-index: 1001;
   opacity: 0;
   transition: opacity 200ms cubic-bezier(0.77, 0, 0.175, 1), z-index 0s 200ms;
   .nav-visible & {
     opacity: 1;
-    z-index: 999;
     transition-property: opacity;
     transition-duration: 200ms;
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
